--- a/App_Registros/App.xaml
+++ b/App_Registros/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:App_Registros"
-             StartupUri="MainWindow.xaml">
+             StartupUri="IU/MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
